# figma-linux-font-helper

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.sh
.github/workflows/: main.yml
res/: figma-fonthelper-updater.service  figma-fonthelper.service  fonthelper-updater.service  fonthelper.service  install.sh  updater.sh
src/: app.rs  args.rs  config.rs  log.rs  main.rs  server.rs  utils.rs
src/routes/: any.rs  get_file.rs  get_files.rs  mod.rs
