[package]
name = "font_helper"
version = "0.1.5"
authors = ["Chugunov Roman <Zebs-BMK@yandex.ru>"]
edition = "2018"
license = "GPL-2.0-only"
description = "Font Helper for Figma for Linux platform"
homepage = "https://github.com/ChugunovRoman/figma-linux-font-helper"
repository = "https://github.com/ChugunovRoman/figma-linux-font-helper"

[dependencies]
libfonthelper = "0.3.9"
simple-server = "0.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
flexi_logger = "0.25.3"
log = "0.4.17"
percent-encoding = "2.2.0"
xdg = "2.4.1"
